# datadoctor

./: cli.py  inspector.py  pyproject.toml  scoring.py  test.csv
.github/workflows/: ci.yml  datadoctor.yml
src/datadoctor/: cli.py  inspector.py  profiler.py  report.py  structure.py
src/datadoctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_inspector.py
