[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datadoctor"
version = "0.1.0"
description = "CLI tool for CSV structural validation and profiling"
authors = [{name = "Remi Barbe"}]
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
datadoctor = "datadoctor.cli:app"
